# hyperart_python

./: README.md  ToDo.md  hyperart.py  pyproject.toml
hyperart_gui/: __init__.py  data_reader.py  defs.py  diagram.py  diagram_view.py  element.py  hyperart.ui  hyperart_window.py  irregular_pgon.py  matrix.py  parameters.py  pattern.py  permutation.py  pgonedge.py  poincare_view.py  qdocument.py  regular_pgon.py  regular_polygon.py  transformation.py  tst.py
test/unit_tests/: test_data_reader.py
