[tool.poetry]
name = "hyperart_python"
version = "0.2.0"
description = "A cross-platform user interface to download, view, and produce application-specific workflows from selected data within a particular Flywheel instance."
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/fw-app-launcher"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.2"
PyQt6 = "^6.2.3"
PyQt6-sip = "^13.2.1"
bson = "^0.5.10"
docker = "^5.0.3"
ifcfg = "^0.22"
pystache = "^0.6.0"
PyQt6-WebEngine = "^6.2.1"
PyYAML = "^6.0"
xmltodict = "^0.12.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^22.1.0"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.790"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
